# adb_client

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: install-deps.sh  python-build.yml  python-release.yml  rust-build-matrix.yml  rust-build.yml  rust-quality.yml  rust-release.yml
adb_cli/: Cargo.toml  README.md
adb_cli/src/: adb_termios.rs  main.rs  opt.rs  utils.rs
adb_cli/src/commands/: emu.rs  host.rs  local.rs  mod.rs  tcp.rs  usb.rs
adb_cli/src/handlers/: emulator_commands.rs  host_commands.rs  local_commands.rs  mod.rs
adb_cli/src/models/: adb_cli_error.rs  adb_device.rs  device.rs  emu.rs  host.rs  local.rs  mod.rs  opts.rs  reboot_type.rs  tcp.rs  usb.rs
adb_client/: Cargo.toml  README.md
adb_client/src/: adb_device_ext.rs  adb_tcp_connexion.rs  adb_termios.rs  adb_transport.rs  constants.rs  error.rs  lib.rs  utils.rs
adb_client/src/commands/: host_features.rs  kill.rs  shell.rs  transport.rs  version.rs
adb_client/src/device/: adb_message_device.rs  adb_message_device_commands.rs  adb_tcp_device.rs  adb_transport_message.rs  adb_usb_device.rs  message_writer.rs  mod.rs  remote_auth.rs  shell_message_writer.rs
adb_client/src/device/commands/: framebuffer.rs  install.rs  list.rs  mod.rs  pull.rs  push.rs  reboot.rs  remount.rs  reverse.rs  shell.rs  stat.rs  uninstall.rs  verity.rs
adb_client/src/device/models/: adb_rsa_key.rs  adb_session.rs  message_commands.rs  mod.rs
adb_client/src/emulator/: adb_emulator_device.rs  mod.rs  tcp_emulator_transport.rs
adb_client/src/emulator/commands/: avd.rs  mod.rs  raw.rs  rotate.rs  sms.rs
adb_client/src/emulator/models/: adb_emulator_command.rs  mod.rs
adb_client/src/emulator_device/: adb_emulator_device.rs  mod.rs
adb_client/src/emulator_device/commands/: mod.rs  rotate.rs  sms.rs
adb_client/src/emulator_device/models/: adb_emulator_command.rs
adb_client/src/mdns/: mdns_device.rs  mdns_discovery.rs  mod.rs
adb_client/src/message_devices/: adb_message_device.rs  adb_message_device_commands.rs  adb_message_transport.rs  adb_multiplexer.rs  adb_rsa_key.rs  adb_session.rs  adb_transport_message.rs  message_commands.rs  mod.rs  utils.rs
adb_client/src/message_devices/commands/: framebuffer.rs  install.rs  list.rs  mod.rs  pull.rs  push.rs  reboot.rs  remount.rs  root.rs  shell.rs  stat.rs  uninstall.rs  verity.rs
adb_client/src/message_devices/commands/utils/: message_writer.rs  mod.rs  shell_message_writer.rs
adb_client/src/message_devices/models/: adb_rsa_key.rs  adb_session.rs  mod.rs
adb_client/src/message_devices/tcp/: README.md  adb_tcp_device.rs  mod.rs  tcp_transport.rs
adb_client/src/message_devices/usb/: README.md  adb_device_info.rs  adb_rsa_key.rs  adb_rusb_device.rs  adb_usb_device.rs  adb_webusb_device.rs  mod.rs  usb_transport.rs  utils.rs
adb_client/src/message_devices/usb/backends/: mod.rs  rusb_transport.rs  webusb_transport.rs
adb_client/src/message_devices/usb/webusb/: mod.rs  transport.rs
adb_client/src/message_devices/usb/wired/: mod.rs  transport.rs
adb_client/src/models/: adb_command.rs  adb_emulator_command.rs  adb_host_command.rs  adb_local_command.rs  adb_proto_port.rs  adb_request_status.rs  adb_server_command.rs  adb_stat_extended_response.rs  adb_stat_response.rs  adb_version.rs  device_long.rs  device_short.rs  device_state.rs  framebuffer_info.rs  host_features.rs  list_info.rs  mdns_services.rs  mod.rs  reboot_type.rs  remount_info.rs  server_status.rs  sync_command.rs
adb_client/src/server/: README.md  adb_emulator_device.rs  adb_server.rs  adb_server_command.rs  adb_server_device_commands.rs  mod.rs  tcp_server_transport.rs
adb_client/src/server/commands/: connect.rs  devices.rs  disconnect.rs  kill.rs  mdns.rs  mod.rs  pair.rs  reconnect.rs  server_status.rs  version.rs  wait_for_device.rs
adb_client/src/server/device_commands/: forward.rs  framebuffer.rs  host_features.rs  install.rs  list.rs  logcat.rs  mod.rs  reboot.rs  reconnect.rs  recv.rs  reverse.rs  send.rs  shell.rs  stat.rs  tcpip.rs  usb.rs
adb_client/src/server/models/: adb_version.rs  device_long.rs  device_short.rs  device_state.rs  mdns_services.rs  mod.rs  server_status.rs  wait_for_device.rs
adb_client/src/server/server_commands/: connect.rs  devices.rs  disconnect.rs  mdns.rs  mod.rs  pair.rs  reconnect.rs  server_status.rs  version.rs
adb_client/src/server_device/: README.md  adb_server_device.rs  adb_server_device_commands.rs  mod.rs
adb_client/src/server_device/commands/: forward.rs  framebuffer.rs  host_features.rs  install.rs  list.rs  logcat.rs  mod.rs  reboot.rs  reconnect.rs  recv.rs  remount.rs  reverse.rs  root.rs  send.rs  shell.rs  stat.rs  tcpip.rs  transport.rs  uninstall.rs  usb.rs  verity.rs
adb_client/src/transports/: mod.rs  tcp_emulator_transport.rs  tcp_server_transport.rs  tcp_transport.rs  transport_trait.rs  usb_transport.rs
adb_client/src/transports/traits/: adb_message_transport.rs  mod.rs
adb_client/src/usb/: adb_rsa_key.rs  adb_usb_device.rs  adb_usb_device_commands.rs  adb_usb_message.rs  constants.rs  mod.rs  usb_commands.rs  usb_shell.rs  usb_writer.rs
benches/: benchmark_adb_push.rs
examples/: adb_cli.rs
examples/mdns/: Cargo.toml  main.rs
examples/mdns/src/: main.rs
examples/python_api/: README.md  __main__.py
examples/tcp_forward/: Cargo.toml  main.rs
pyadb_client/: Cargo.toml  README.md  pyproject.toml
pyadb_client/src/: adb_server.rs  adb_server_device.rs  adb_tcp_device.rs  adb_usb_device.rs  lib.rs
pyadb_client/src/models/: devices.rs  mod.rs
src/: adb_tcp_connection.rs  adb_tcp_connexion.rs  adb_termios.rs  error.rs  lib.rs
src/commands/: connect.rs  devices.rs  host_features.rs  kill.rs  list.rs  mod.rs  pair.rs  pull.rs  push.rs  reboot.rs  recv.rs  send.rs  shell.rs  stat.rs  transport.rs  version.rs
src/models/: adb_command.rs  adb_request_status.rs  adb_version.rs  device.rs  device_long.rs  device_short.rs  device_state.rs  host_features.rs  mod.rs  sync_command.rs
src/server/: adb_server.rs  (+2 more)
tests/: tests.rs
(+22 files in other folders)
