[workspace]
members = ["adb_cli", "adb_client"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/cocool97/adb_client"
version = "1.0.7"
keywords = ["adb", "android"]

# To build locally when working on a new version
[patch.crates-io]
adb_client = { path = "./adb_client" }

[profile.release]
codegen-units = 1
debug-assertions = false
lto = "thin"
opt-level = 'z'
strip = true
