[workspace]
members = ["adb_cli", "adb_client", "pyadb_client", "examples/mdns"]
resolver = "2"

[workspace.package]
authors = ["Corentin LIAUD"]
edition = "2024"
homepage = "https://github.com/cocool97/adb_client"
keywords = ["adb", "android", "tcp", "usb"]
license = "MIT"
repository = "https://github.com/cocool97/adb_client"
version = "2.1.19"
rust-version = "1.91.0"

# To build locally when working on a new release
[patch.crates-io]
adb_client = { path = "./adb_client" }

[profile.release]
codegen-units = 1
debug-assertions = false
lto = "thin"
opt-level = 'z'
strip = true
