[workspace]
members = ["adb_cli", "adb_client", "examples/mdns", "pyadb_client"]
resolver = "2"

[workspace.package]
authors = ["Corentin LIAUD"]
edition = "2024"
homepage = "https://github.com/cocool97/adb_client"
keywords = ["adb", "android", "tcp", "usb"]
license = "MIT"
repository = "https://github.com/cocool97/adb_client"
version = "3.0.0"
rust-version = "1.91.0"

# To build locally when working on a new release
[patch.crates-io]
adb_client = { path = "./adb_client" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[profile.release]
codegen-units = 1
debug-assertions = false
lto = "thin"
opt-level = 'z'
strip = true
