[package]
authors.workspace = true
description = "Rust ADB (Android Debug Bridge) CLI"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "adb_cli"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
adb_client = { version = "^2.0.0" }
anyhow = { version = "1.0.94" }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = { version = "0.11.5" }
log = { version = "0.4.26" }

[target.'cfg(unix)'.dependencies]
termios = { version = "0.3.3" }

#####################################
# Debian package build instructions #
#####################################
[package.metadata.deb]
assets = [
    { source = "target/release/adb_cli", dest = "usr/bin/", mode = "755" },
]
priority = "optional"
section = "utility"

##################################
# RPM package build instructions #
##################################
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/adb_cli", dest = "/usr/bin/adb_cli", mode = "755" },
]
license = "MIT"
