[package]
authors.workspace = true
description = "Rust ADB (Android Debug Bridge) client library"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "adb_client"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
mdns = ["dep:mdns-sd"]
rusb = ["dep:rsa", "dep:rusb"]
webusb = ["dep:webusb-web", "dep:rsa"]

[dependencies]
base64 = { version = "0.22.1" }
bincode = { version = "2.0.1", features = ["serde"] }
byteorder = { version = "1.5.0" }
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
image = { version = "0.25.8", default-features = false }
log = { version = "0.4.28" }
num-bigint = { version = "0.8.4", package = "num-bigint-dig" }
num-traits = { version = "0.2.19" }
quick-protobuf = { version = "0.8.1" }
rand = { version = "0.8.5" }
rcgen = { version = "0.13.2", default-features = false, features = [
    "pem",
    "ring"
] }
regex = { version = "1.12.2", features = ["perf", "std", "unicode"] }
rustls = { version = "0.23.33", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-pki-types = { version = "1.12.0", features = ["web"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = { version = "0.1.20" }
sha1 = { version = "0.10.6", features = ["oid"] }
thiserror = { version = "2.0.17" }

#########
# MDNS dependencies
mdns-sd = { version = "0.17.0", default-features = false, features = [
    "logging",
], optional = true }
#########
#########
# USB-only dependencies
rsa = { version = "0.9.7", optional = true }
rusb = { version = "0.9.4", features = ["vendored"], optional = true }
#########
#########
# webusb dependencies
webusb-web = { version = "0.4.1", optional = true }
getrandom = { version = "0.2.16", features = ["js"], optional = true }
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"], optional = true }


[dev-dependencies]
anyhow = { version = "1.0.100" }
criterion = { version = "0.7.0" } # Used for benchmarks

[[bench]]
harness = false
name = "benchmark_adb_push"
path = "../benches/benchmark_adb_push.rs"
