[package]
name = "pyadb_client"
description = "Python wrapper for adb_client library"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[lib]
name = "pyadb_client"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[dependencies]
anyhow = { version = "1.0.95" }
adb_client = { version = "2.1.5" }
pyo3 = { version = "0.23.4", features = ["extension-module", "anyhow", "abi3-py37"] }
pyo3-stub-gen = "0.7.0"
pyo3-stub-gen-derive = "0.7.0"