[package]
authors.workspace = true
description = "Python wrapper for adb_client library"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "pyadb_client"
readme = "README.md"
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "pyadb_client"

[[bin]]
doc = false
name = "stub_gen"

[dependencies]
adb_client = { path = "../adb_client" }
anyhow = { version = "1.0.95" }
pyo3 = { version = "0.24.1", features = [
    "abi3-py37",
    "anyhow",
    "extension-module",
] }
pyo3-stub-gen = "0.7.0"
pyo3-stub-gen-derive = "0.7.0"
