[package]
authors.workspace = true
description = "Python wrapper for adb_client library"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "pyadb_client"
readme = "README.md"
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "pyadb_client"

[[bin]]
doc = false
name = "stub_gen"

[dependencies]
adb_client = { path = "../adb_client", features = ["usb"] }
anyhow = { version = "1.0.100" }
pyo3 = { version = "0.27.2", features = ["abi3-py310", "anyhow"] }
pyo3-stub-gen = { version = "0.17.2" }
pyo3-stub-gen-derive = { version = "0.17.2" }
