[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "pyadb_client"
dependencies = ["maturin", "patchelf"]
dynamic = ["version"] # Let the build system automatically set package version
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
