[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]

[project]
classifiers = ["Programming Language :: Python", "Programming Language :: Rust"]
dynamic = ["authors", "keywords", "version"]
name = "pyadb_client"
requires-python = ">= 3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
