[package]
name = "mdns"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "mdns"
path = "main.rs"

[dependencies]
adb_client = { path = "../../adb_client", default-features = false, features = [
    "mdns",
    "usb"
] }
