[package]
name = "tcp_forward"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "tcp_forward"
path = "main.rs"

[dependencies]
adb_client = { path = "../../adb_client", default-features = false, features = [
    "usb",
] }
